fix problem where project overlay text was overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -1056,6 +1056,7 @@ a.btn:focus{
   border-radius: 3px;
   background-color: rgba(76, 77, 79, .98);
   color: white;
+  overflow: scroll;
 }
 
 .project-overlay p {
